--- a/src/Climb.css
+++ b/src/Climb.css
@@ -9,10 +9,10 @@
 }
 
 .climb-main{
-    position: relative; /* Enable absolute positioning for child elements */
+    position: relative; 
     height: 500px;
-    overflow: hidden; /* Prevent image overflow */
-    background-image: url("./assets/assets-11.jpg"); /* Replace with your image path */
+    overflow: hidden;
+    background-image: url("./assets/assets-11.jpg"); 
     background-size:cover;
     background-position: center;
 }
@@ -34,8 +34,8 @@
 }
 
 .top-nav a:hover {
-    background-color: #2980b9; /* slightly darker blue on hover */
-    color: white; /* black text on hover */
+    background-color: #2980b9; 
+    color: white; 
   }
 
 .top-nav span{
@@ -71,7 +71,7 @@
 
 
   .schedule-table td {
-    padding-right: 25px; /* Add padding to each cell */
+    padding-right: 25px; 
     padding-top: 4px;
   }
 
