--- a/src/History.css
+++ b/src/History.css
@@ -1,8 +1,8 @@
 .history-body {
-    position: relative; /* Enable absolute positioning for child elements */
+    position: relative; 
     height: 550px;
-    overflow: hidden; /* Prevent image overflow */
-    background-image: url("./assets/assets-23.jpg"); /* Replace with your image path */
+    overflow: hidden; 
+    background-image: url("./assets/assets-23.jpg"); 
     background-size:cover;
     background-position: center;
   }
